[gd_scene load_steps=6 format=3 uid="uid://cmtkxo7xmhpgo"]

[ext_resource type="Script" path="res://Items/Scripts/itemInventario.gd" id="1_2syru"]
[ext_resource type="Texture2D" uid="uid://b0c2juy08dxjs" path="res://Items/Assets/Kibble.png" id="1_qfq42"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lldg6"]
radius = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pwckj"]
radius = 16.6433

[sub_resource type="CircleShape2D" id="CircleShape2D_t030u"]
radius = 16.0

[node name="item" type="CharacterBody2D"]
script = ExtResource("1_2syru")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_qfq42")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_lldg6")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(4, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, -1)
shape = SubResource("CircleShape2D_pwckj")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_t030u")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
